[package]
name = "rover-engine"
version = "0.1.0"
authors = ["nightlyside <nightlyside@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
cgmath = "0.18.0"
env_logger = "0.8.3"
futures = "0.3.14"
bytemuck = {version= "1.5.1", features = [ "derive" ]}
anyhow = "1.0.40"
image = "0.23.14"

[dependencies.wgpu]
version = "0.7.1"
features = ["vulkan-portability"]

[build-dependencies]
anyhow = "1.0.40"
fs_extra = "1.2.0"
glob = "0.3.0"
shaderc = "0.7.2"
rayon = "1.5.0"